Fixed teh navbar collapse

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -88,7 +88,7 @@
 }
 
 .header_logo {
-	text-align: center;
+	float: left;
 	width: auto;
 	position: relative;
 }
@@ -108,6 +108,10 @@ hr {
 
 .navbar {
 	margin-bottom: 0px;
+}
+
+.navbar li {
+  margin-top: 10px;
 }
 
 .profile_panel {
